# high-power

./: LICENSE  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 22030ecf5f08_create_turbine_table.py  a1b2c3d4e5f6_add_current_output_mw.py  b2c3d4e5f6a7_add_physics_fields_and_parameter_table.py  c3d4e5f6a7b8_add_component_models.py  d4e5f6a7b8c9_add_gearbox_generator_blade.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  blade.py  gearbox.py  generator.py  parameter.py  pitch_system.py  tower.py  turbine.py  wake_model.py  yaw_system.py
backend/app/routers/: components.py  parameter.py  turbine.py
backend/app/schemas/: __init__.py  components.py  parameter.py  turbine.py
backend/app/services/: components.py  parameter.py  physics.py  turbine.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/design/: page.tsx
frontend/src/app/design/[subsystemId]/: DrivetrainOverview.tsx  SubsystemOverview.tsx  page.tsx
frontend/src/app/design/[subsystemId]/detail/: BladeDetail.tsx  page.tsx
frontend/src/app/stories/: page.tsx
frontend/src/app/stories/[id]/: StoryPlayer.tsx  page.tsx
frontend/src/context/: WindSpeedContext.tsx
frontend/src/data/: stories.ts  story-svgs.ts  subsystems.ts
frontend/src/lib/: api.ts
