[project]
name = "high-power-backend"
version = "0.1.0"
description = "Wind Turbine Discovery API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
    "alembic>=1.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
